Add IPMI Privilege Level for commands
Since OEM commands are sent from the host, the commands are
marked as system interface only. Package the library into
/usr/lib/ipmid-providers.

Change-Id: I2cb2d12ce99d11ddfe528cb1c30bb2313cfc4dc8
Signed-off-by: Tom <tomjoseph@in.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,10 @@
-liboemhandlerdir = ${libdir}/host-ipmid
+liboemhandlerdir = ${libdir}/ipmid-providers
 liboemhandler_LTLIBRARIES = liboemhandler.la
 liboemhandler_la_SOURCES = oemhandler.cpp
 liboemhandler_la_LDFLAGS = $(SYSTEMD_LIBS) -version-info 0:0:0 -shared
 liboemhandler_la_CXXFLAGS = $(SYSTEMD_CFLAGS) $(AM_CXXFLAGS)
+
+install-exec-hook:
+	$(MKDIR_P) $(DESTDIR)/$(libdir)/host-ipmid
+	cd $(DESTDIR)/$(libdir)/host-ipmid && \
+	$(LN_S) ../ipmid-providers/liboemhandler.so.0 liboemhandler.so.0
