--- a/configure.ac
+++ b/configure.ac
@@ -10,6 +10,8 @@ AC_PROG_CXX
 AM_PROG_AR
 AC_PROG_INSTALL
 AC_PROG_MAKE_SET
+AC_PROG_LN_S
+AC_PROG_MKDIR_P
 
 # Checks for libraries.
 PKG_CHECK_MODULES([SYSTEMD], [libsystemd >= 221])
