--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-liboemhandlerdir = ${libdir}/host-ipmid
+liboemhandlerdir = ${libdir}/ipmid-providers
 liboemhandler_LTLIBRARIES = liboemhandler.la
 liboemhandler_la_SOURCES = oemhandler.cpp
 liboemhandler_la_LDFLAGS = $(SYSTEMD_LIBS) -version-info 0:0:0 -shared
