--- a/configure.ac
+++ b/configure.ac
@@ -17,6 +17,8 @@ PKG_CHECK_MODULES([SYSTEMD], [libsystemd >= 221])
 # Checks for header files.
 AC_CHECK_HEADER(systemd/sd-bus.h, ,[AC_MSG_ERROR([Could not find systemd/sd-bus.h...systemd development package required])])
 AC_CHECK_HEADER(host-ipmid/ipmid-api.h, ,[AC_MSG_ERROR([Could not find host-ipmid/ipmid-api.h...host-ipmid package required])])
+PKG_CHECK_MODULES([OPENPOWER_DBUS_INTERFACES], [openpower-dbus-interfaces],,
+                  [AC_MSG_ERROR([Could not find openpower-dbus-interfaces...openbmc/openpower-dbus-interfaces package required])])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AX_CXX_COMPILE_STDCXX(14, [noext])
@@ -46,6 +48,12 @@ AS_IF([test "x$enable_oe_sdk" == "xyes"],
     ]
     AC_SUBST([OESDK_TESTCASE_FLAGS], [$testcase_flags])
 )
+
+# Service dbus root
+AC_ARG_VAR(CONTROL_HOST_OBJPATH, [The Control Host Dbus root])
+AS_IF([test "x$CONTROL_HOST_OBJPATH" == "x"],
+      [CONTROL_HOST_OBJPATH="/org/open_power/control/host"])
+AC_DEFINE_UNQUOTED([CONTROL_HOST_OBJPATH], ["$CONTROL_HOST_OBJPATH"], [The Control Host Dbus root])
 
 # Create configured output.
 AC_CONFIG_FILES([Makefile])
