Add support to send host bound commands for OpenPower machines
Ipmid launches a D-Bus service that would enable REST users to
send commands to Host. This commit puts the support for using
that service to send commands that are applicable to OpenPower
implementations only.

Change-Id: I68dcb3e742145b85a719fa3045367402aa1ed19b
Signed-off-by: Vishwanatha Subbanna <vishwa@linux.vnet.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,17 @@
 liboemhandlerdir = ${libdir}/ipmid-providers
 liboemhandler_LTLIBRARIES = liboemhandler.la
-liboemhandler_la_SOURCES = oemhandler.cpp
-liboemhandler_la_LDFLAGS = $(SYSTEMD_LIBS) -version-info 0:0:0 -shared
-liboemhandler_la_CXXFLAGS = $(SYSTEMD_CFLAGS) $(AM_CXXFLAGS)
+
+liboemhandler_la_SOURCES = oemhandler.cpp \
+                           host-interface.cpp
+
+liboemhandler_la_LDFLAGS = $(SYSTEMD_LIBS)\
+                           $(SDBUSPLUS_LIBS) \
+                           $(OPENPOWER_DBUS_INTERFACES_LIBS) \
+                           $(PHOSPHOR_LOGGING_LIBS) \
+                           -version-info 0:0:0 -shared
+
+liboemhandler_la_CXXFLAGS = $(SYSTEMD_CFLAGS) \
+                            $(SDBUSPLUS_CFLAGS) \
+                            $(OPENPOWER_DBUS_INTERFACES_CFLAGS) \
+                            $(PHOSPHOR_LOGGING_CFLAGS) \
+                            $(AM_CXXFLAGS)
