Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,3 +4,16 @@
 	inheritFrom = openbmc-cpp-repos
 [submit]
 	action = rebase if necessary
+[access "refs/heads/*"]
+	create = group github/openbmc/openpower-host-ipmi-oem-maintainers
+	forgeCommitter = group github/openbmc/openpower-host-ipmi-oem-maintainers
+	push = group github/openbmc/openpower-host-ipmi-oem-maintainers
+	label-Code-Review = -2..+2 group github/openbmc/openpower-host-ipmi-oem-maintainers
+	label-Ok-To-Test = +0..+1 group github/openbmc/openpower-host-ipmi-oem-maintainers
+	label-Verified = -1..+1 group github/openbmc/openpower-host-ipmi-oem-maintainers
+	submit = group github/openbmc/openpower-host-ipmi-oem-maintainers
+	editTopicName = group github/openbmc/openpower-host-ipmi-oem-maintainers
+[access "refs/tags/*"]
+	push = +force group github/openbmc/openpower-host-ipmi-oem-maintainers
+	pushTag = +force group github/openbmc/openpower-host-ipmi-oem-maintainers
+	pushSignedTag = group github/openbmc/openpower-host-ipmi-oem-maintainers
