--- a/project.config
+++ b/project.config
@@ -15,5 +15,5 @@
 	editTopicName = group github/openbmc/openpower-host-ipmi-oem-maintainers
 [access "refs/tags/*"]
 	push = +force group github/openbmc/openpower-host-ipmi-oem-maintainers
-	pushTag = group github/openbmc/openpower-host-ipmi-oem-maintainers
-	pushSignedTag = group github/openbmc/openpower-host-ipmi-oem-maintainers
+	createTag = group github/openbmc/openpower-host-ipmi-oem-maintainers
+	createSignedTag = group github/openbmc/openpower-host-ipmi-oem-maintainers
