Reset root password in BMC auth reset cmd
Resets the root password back to the default one
used on OpenBMC systems.  It uses the pam_unix module
to change the password in /etc/shadow.

As a reminder, this IPMI command is not on the host
IPMI whitelist, so if a user wants to prevent the host
from running this command, the OEM command to turn on
whitelisting should be used.

Change-Id: Ie64fcc6ed564398802fe31690cebd52f8ae0eacc
Signed-off-by: Matt Spinler <spinler@us.ibm.com>

--- a/configure.ac
+++ b/configure.ac
@@ -69,6 +69,20 @@ AS_IF([test "x$CONTROL_HOST_OBJ_MGR" == "x"],
       [CONTROL_HOST_OBJ_MGR="/org/open_power/control"])
 AC_DEFINE_UNQUOTED([CONTROL_HOST_OBJ_MGR], ["$CONTROL_HOST_OBJ_MGR"], [The Control Host D-Bus Object Manager])
 
+AC_DEFINE(MAPPER_BUS_NAME, "xyz.openbmc_project.ObjectMapper",
+          [The object mapper bus name])
+
+AC_DEFINE(MAPPER_OBJ, "/xyz/openbmc_project/object_mapper",
+          [The object mapper object path])
+
+AC_DEFINE(MAPPER_IFACE, "xyz.openbmc_project.ObjectMapper",
+          [The object mapper interface])
+
+AC_ARG_VAR(DEFAULT_PW, [Default PW])
+AS_IF([test "x$DEFAULT_PW" == "x"],
+      [DEFAULT_PW="0penBmc"])
+AC_DEFINE_UNQUOTED([DEFAULT_PW], ["$DEFAULT_PW"], [Default PW])
+
 # Create configured output.
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
