Reset root password in BMC auth reset cmd
Resets the root password back to the default one
used on OpenBMC systems.  It uses the pam_unix module
to change the password in /etc/shadow.

As a reminder, this IPMI command is not on the host
IPMI whitelist, so if a user wants to prevent the host
from running this command, the OEM command to turn on
whitelisting should be used.

Change-Id: Ie64fcc6ed564398802fe31690cebd52f8ae0eacc
Signed-off-by: Matt Spinler <spinler@us.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,6 +13,8 @@ liboemhandler_la_LDFLAGS = $(SYSTEMD_LIBS)\
                            $(SDBUSPLUS_LIBS) \
                            $(OPENPOWER_DBUS_INTERFACES_LIBS) \
                            $(PHOSPHOR_LOGGING_LIBS) \
+                           -lpam \
+                           -lpam_misc \
                            -version-info 0:0:0 -shared
 
 liboemhandler_la_CXXFLAGS = $(SYSTEMD_CFLAGS) \
