Delete LDAP config in BMC auth reset command
This disables LDAP authentication so that the
BMC goes back to local account authentication.

If LDAP isn't configured at the time, that is OK
and there will not be an error.

Change-Id: I20c37e83169f56789e9a6e850965a01c9be502d5
Signed-off-by: Matt Spinler <spinler@us.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,7 @@ liboemhandler_LTLIBRARIES = liboemhandler.la
 
 liboemhandler_la_SOURCES = oemhandler.cpp \
                            host-interface.cpp \
+                           ldap.cpp \
                            local_users.cpp \
                            org/open_power/OCC/Metrics/error.cpp
 
