--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,7 @@ AC_INIT([openpower-host-ipmi-oem], [1.0], [https://github.com/openbmc/openpower-
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror foreign dist-xz])
 AM_SILENT_RULES([yes])
+AC_LANG([C++])
 
 # Checks for programs.
 AC_PROG_CXX
