Convert host-ipmid -> libipmid
phosphor-host-ipmid now exposes a library along with headers for
interfacing with the ipmi daemon. Compile and link against the new
library.

Change-Id: I4f01c2d658b75d27e11f90013198a4951c62b1f5
Signed-off-by: William A. Kennington III <wak@google.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,12 +11,16 @@ BUILT_SOURCES = org/open_power/OCC/Metrics/error.hpp \
 
 liboemhandler_la_LDFLAGS = $(SYSTEMD_LIBS)\
                            $(SDBUSPLUS_LIBS) \
+                           $(LIBIPMID_LIBS) \
+                           $(LIBIPMID_HOST_LIBS) \
                            $(OPENPOWER_DBUS_INTERFACES_LIBS) \
                            $(PHOSPHOR_LOGGING_LIBS) \
                            -version-info 0:0:0 -shared
 
 liboemhandler_la_CXXFLAGS = $(SYSTEMD_CFLAGS) \
                             $(SDBUSPLUS_CFLAGS) \
+                            $(LIBIPMID_CFLAGS) \
+                            $(LIBIPMID_HOST_CFLAGS) \
                             $(OPENPOWER_DBUS_INTERFACES_CFLAGS) \
                             $(PHOSPHOR_LOGGING_CFLAGS) \
                             $(AM_CXXFLAGS)
