Implement OEM chassis control for openpower
The chassis control for openpower is slightly different than the
standard. Specifically, there is more signalling and handshaking that
needs to happen to step through the various power states. This change
moves the OEM behavior into the OEM IPMI library so the shared
implementation can provide the standard behavior.

Tested: This is not tested.

Change-Id: I9b6636abb40435fbe5b9271a0707b6afb4fd1f8a
Signed-off-by: Vernon Mauery <vernon.mauery@linux.intel.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,7 @@ liboemhandlerdir = ${libdir}/ipmid-providers
 liboemhandler_LTLIBRARIES = liboemhandler.la
 
 liboemhandler_la_SOURCES = oemhandler.cpp \
+                           chassishandler.cpp \
                            host-interface.cpp \
                            org/open_power/OCC/Metrics/error.cpp \
                            inventory-sensor.cpp
