--- a/project.config
+++ b/project.config
@@ -1,19 +1,8 @@
 [project]
 	description = phosphor-host-ipmid support package for OpenPower OEM commands.
 [access]
-	inheritFrom = openbmc-cpp-repos
+	inheritFrom = openbmc-all-repos
 [submit]
 	action = rebase if necessary
-[access "refs/heads/*"]
-	create = group github/openbmc/openpower-host-ipmi-oem-maintainers
-	forgeCommitter = group github/openbmc/openpower-host-ipmi-oem-maintainers
-	push = group github/openbmc/openpower-host-ipmi-oem-maintainers
-	label-Code-Review = -2..+2 group github/openbmc/openpower-host-ipmi-oem-maintainers
-	label-Ok-To-Test = +0..+1 group github/openbmc/openpower-host-ipmi-oem-maintainers
-	label-Verified = -1..+1 group github/openbmc/openpower-host-ipmi-oem-maintainers
-	submit = group github/openbmc/openpower-host-ipmi-oem-maintainers
-	editTopicName = group github/openbmc/openpower-host-ipmi-oem-maintainers
-[access "refs/tags/*"]
-	push = +force group github/openbmc/openpower-host-ipmi-oem-maintainers
-	createTag = group github/openbmc/openpower-host-ipmi-oem-maintainers
-	createSignedTag = group github/openbmc/openpower-host-ipmi-oem-maintainers
+[access "refs/*"]
+	owner = group github/openbmc/openpower-host-ipmi-oem-maintainers
